<resources>
    <string name="app_name">CoupangEats</string>

    <string name="title_home">홈</string>
    <string name="title_search">검색</string>
    <string name="title_favorites">즐겨찾기</string>
    <string name="title_orderdetails">주문내역</string>
    <string name="title_myeats">My이츠</string>

    <string name="set_delivery_address">"배달지 주소 설정"</string>
    <string name="input_search_word">검색어 입력</string>
    <string name="delivery_address">배달지 주소 설정</string>
    <string name="search_word">검색어 입력</string>


    //Login Dialog IMSI
    <string name="update">UPDATE</string>
    <string name="add">ADD</string>
    <string name="delete">DELETE</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>/>


    //회원가입
    <string name="page_title_subs">      회원가입</string>
    <string name="label_1">all_agree</string>
    <string name="label_2">14age</string>
    <string name="label_3">use_agree</string>
    <string name="label_4">finance_agree</string>
    <string name="label_5">info_agree</string>
    <string name="label_6">give_agree</string>/>

</resources>