<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        android:visible="true" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search"
        android:visible="true" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/ic_favorites_black_24dp"
        android:title="@string/title_favorites"
        android:visible="true" />

    <item
        android:id="@+id/navigation_orderdetails"
        android:icon="@drawable/ic_orderdetails_black_24dp"
        android:title="@string/title_orderdetails"
        android:visible="true" />

    <item
        android:id="@+id/navigation_myeats"
        android:icon="@drawable/ic_myeats_black_24dp"
        android:title="@string/title_myeats"
        android:visible="true" />

</menu>