<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.main.SubsActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBarSubs"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorAccent" />

        </com.google.android.material.appbar.AppBarLayout>


        <ImageView
            android:id="@+id/subsexitIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:src="@drawable/subs_exit"
            app:layout_constraintRight_toLeftOf="@+id/substitleIv">

        </ImageView>

        <ImageView
            android:id="@+id/substitleIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/subs_title"
            app:layout_constraintLeft_toRightOf="@id/subsexitIv"
            tools:ignore="MissingConstraints">

        </ImageView>

        <ImageView
            android:id="@+id/sublogIv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="10dp"
            android:foregroundGravity="center"
            android:src="@drawable/subs_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/substitleIv">

        </ImageView>

        <ImageView
            android:id="@+id/subtitle2Iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/subs_title2"
            app:layout_constraintTop_toBottomOf="@+id/sublogIv"
            tools:ignore="MissingConstraints">

        </ImageView>

        <!-- 회원정보를 입력해주세요 -->

        <LinearLayout
            android:id="@+id/subsLl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintTop_toBottomOf="@+id/subtitle2Iv"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/subsidEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rectangle_line"
                android:backgroundTint="@color/rgba"
                android:cursorVisible="true"
                android:drawableStart="@drawable/subs_icon_id"
                android:drawablePadding="20dp"
                android:hint="아이디(이메일)"
                android:inputType="textEmailAddress"
                android:visibility="visible">

            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/subsLl2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintTop_toBottomOf="@+id/subsLl1"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/subspwEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/rectangle_line"
                android:backgroundTint="@color/rgba"
                android:cursorVisible="true"
                android:drawableStart="@drawable/subs_icon_pw"
                android:drawablePadding="20dp"
                android:hint="패스워드"
                android:inputType="textPassword"
                app:layout_constraintLeft_toRightOf="@+id/subsLl1">


            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/subsLl3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintTop_toBottomOf="@+id/subsLl2"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/subsnameEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle_line"
                android:backgroundTint="@color/rgba"
                android:cursorVisible="true"
                android:drawableStart="@drawable/subs_icon_name"
                android:drawablePadding="20dp"
                android:hint="이름"
                android:inputType="textPersonName"
                app:layout_constraintLeft_toRightOf="@+id/subsLl2">


            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/subsLl4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintTop_toBottomOf="@+id/subsLl3"
            tools:ignore="MissingConstraints">

            <EditText
                android:id="@+id/subshpEt"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/rectangle_line"
                android:backgroundTint="@color/rgba"
                android:cursorVisible="true"
                android:drawableStart="@drawable/subs_icon_hp"
                android:drawablePadding="20dp"
                android:hint="휴대폰 번호"
                android:inputType="phone"
                app:layout_constraintLeft_toRightOf="@+id/subsLl3">
                >

            </EditText>
        </LinearLayout>

        //쿠팡 서비스약관에 동의해주세요

        <ImageView
            android:id="@+id/substitleIv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/subs_title3"
            app:layout_constraintTop_toBottomOf="@+id/subsLl4"
            tools:ignore="MissingConstraints,NotSibling">

        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/substitleIv3"
            tools:ignore="MissingConstraints">


            <CheckBox
                android:id="@+id/subsallCb"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/label_1" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/subs2Cb"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/label_2" />

                    <CheckBox
                        android:id="@+id/subs3Cb"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/label_3" />

                    <CheckBox
                        android:id="@+id/subs4Cb"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/label_4" />

                    <CheckBox
                        android:id="@+id/subs5Cb"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/label_5" />

                    <CheckBox
                        android:id="@+id/subs6Cb"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/label_6" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/subsbtnBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:src="@drawable/subs_btn"
                android:text="동의하고 가입하기">

            </Button>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>